# srPesquisas

./: .gitignore  GEMINI.md
.github/workflows/: deploy.yml
litscout/: .env.example  README.md  pyproject.toml
litscout/bib/: consultas.md
litscout/src/litscout/: config.py  main.py
litscout/src/litscout/agents/: analyzer.py  nodes.py  pipeline.py  state.py
litscout/src/litscout/database/: engine.py  models.py  repository.py
litscout/src/litscout/search/: doi_resolver.py  openalex_client.py  orchestrator.py  scholarly_client.py
litscout/src/litscout/ui/: browser.py  display.py  tracer.py
litscout/src/litscout/utils/: data_processing.py  schemas.py
litscout/tests/: test_data_processing.py  test_database.py
litscout/wiki/: log.md
srPesquisas/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
srPesquisas/bib/: Carvacrol.md
srPesquisas/src/sr_pesquisas/: app.py  config.py  main.py
srPesquisas/src/sr_pesquisas/agents/: analyzer.py  nodes.py  pipeline.py  state.py
srPesquisas/src/sr_pesquisas/database/: engine.py  models.py  repository.py
srPesquisas/src/sr_pesquisas/search/: openalex_client.py  orchestrator.py  scholarly_client.py
srPesquisas/src/sr_pesquisas/ui/: display.py  tracer.py
srPesquisas/src/sr_pesquisas/utils/: data_processing.py  schemas.py
srPesquisas/tests/: test_data_processing.py  test_database.py  test_nodes_mock.py
wiki/: index.md  log.md
