[project]
name = "litscout"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.41.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.50",
    "typer>=0.26.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
