[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sr_pesquisas"
version = "0.1.0"
description = "Literature Scout — AI-powered academic research tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Search & metadata
    "scholarly>=1.7.11",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    # Data manipulation
    "polars>=0.20.0",
    # LLM / agents
    "langgraph>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.2.0",
    # CLI / UI
    "rich>=13.7.0",
    "typer>=0.12.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "tenacity>=8.3.0",
    "pymupdf>=1.27.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
sr_pesquisas = "sr_pesquisas.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/sr_pesquisas"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-mock>=3.15.1",
]
